# sclog

./: .gitignore  CMakeLists.txt  README.md  main.cpp  my_compile.h  sc_log.cc  sc_log.h  sclog.cc  sclog.h  test_sclog.cpp  test_spdlog.cc  vs_log.cc  vs_log.h
include/: CTestTestfile.cmake  Makefile  cmake_install.cmake  config.h
spdlog/: CTestTestfile.cmake  DartConfiguration.tcl  spdlogConfig.cmake
spdlog/tests/: CTestTestfile.cmake  spdlog-utests
strings/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  conf_to_src
